remove redundant calls to modelmapper since 'name' field of User entity will stay